# move_quadcopter

./: CMakeLists.txt  README.md  package.xml
action/: Navigate.action
config/: xbox360.yaml
include/hector_move_base/: QuadrotorHectorNavigation.h  QuadrotorNavigationServer.h
include/move_quadcopter/: NavigateAction.h  NavigateActionFeedback.h  NavigateActionGoal.h  NavigateActionResult.h  NavigateFeedback.h  NavigateGoal.h  NavigateResult.h  goal_broadcaster.h  navigation_server.h
launch/: indoor_test_hector_quadcopter.launch  joy_teleop_sim.launch
src/: QuadrotorNavigationClient.cpp  QuadrotorNavigationServer.cpp  goal_broadcaster.cpp  navigation_client.cpp  navigation_server.cpp
